k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexvion
  namespace: nexvion
  labels:
    app: nexvion
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: nexvion

  template:
    metadata:
      labels:
        app: nexvion

    spec:
      containers:
        - name: nexvion
          image: shubh01devops/nexvion-web:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
