k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexvion-service
  namespace: nexvion
spec:
  type: NodePort

  selector:
    app: nexvion

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
