k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-ingress
  namespace: nexvion
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion-service
                port:
                  number: 80


#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: nexvion-ingress
 # namespace: nexvion
#spec:
 # ingressClassName: nginx

  #rules:
   # - host: nexvion.local
    #  http:
     #  paths:
      #    - path: /
       #     pathType: Prefix
        #    backend:
         #     service:
          #      name: nexvion-service
           #     port:
            #      number: 80
